tests/cases/pass/bool_logic.cs
class Program { static void Main() { bool a = true; bool b = false; Console.WriteLine(a && !b); Console.WriteLine(a || b); } }
