tests/cases/fail/invalid_plus_operands.cs
class Program {
    static void Main() {
        bool b = true;
        int x = b + 1;
        Console.WriteLine(x);
    }
}
